# eah_gfx_ext

./: .gitignore  AbstractGraphicsEngine.cpp  AbstractGraphicsEngine.h  BOINCClientAdapter.cpp  BOINCClientAdapter.h  Doxyfile  EinsteinS5R3Adapter.cpp  EinsteinS5R3Adapter.h  GraphicsEngineFactory.cpp  GraphicsEngineFactory.h  Makefile  Resource.cpp  Resource.h  ResourceFactory.cpp  ResourceFactory.h  Starsphere.cpp  Starsphere.h  StarsphereS5R3.cpp  StarsphereS5R3.h  WindowManager.cpp  WindowManager.h  build.sh  main.C  pulsar_list.C  resources.orc  search_info.C  setup.sh  snr_list.C  starlist.C  starsphere.C  starsphere.h  user_text.C
doc/default/: footer.html  header.html  stylesheet.css
orc/: Makefile  ResourceCompiler.cpp  ResourceCompiler.h  orc.cpp
patches/: CMakeLists.txt.liboglft.patch  CMakeLists.txt.oglft.patch  OGLFT.h.cmake.macos.patch  boinc.Makefile.mingw.patch  boinc.boinc_win.h.minggw.patch  boinc.filesys.C.mingw.patch  boinc.stackwalker_win.cpp.minggw.patch  freetype2.exports.mk.patch  toolchain-linux-mingw.oglft.cmake  x86-mingw32-build.sh.batch.patch  x86-mingw32-build.sh.conf.patch  x86-mingw32-build.sh.conf_versions.patch  x86-mingw32-build.sh.patch
src/: doxygen_index.h
src/framework/: AbstractGraphicsEngine.cpp  AbstractGraphicsEngine.h  BOINCClientAdapter.cpp  BOINCClientAdapter.h  GraphicsEngineFactory.cpp  GraphicsEngineFactory.h  Libxml2Adapter.cpp  Libxml2Adapter.h  Makefile  Makefile.mingw  (+5 more)
src/keinsteinsaver/src/: Makefile.am  keinsteinsaver.cpp  keinsteinsaver.desktop  keinsteinsaver.h  keinsteinsaver.lsm  keinsteinsaverui.ui
(+38 files in other folders)
